# PhrygianServer

./: CMakeLists.txt  README.md
src/: HttpTypes.hpp  PhrygianServer.cpp  PhrygianServer.hpp  client.cpp  main.cpp
src/Routes/: Get.cpp  Get.hpp  Route.cpp  Route.hpp
